--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,15 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    
     {
+      "name": "Debug Mastermind with Test Input",
       "type": "rdbg",
-      "name": "Debug current file with rdbg",
       "request": "launch",
-      "script": "${file}",
+      "script": "${workspaceFolder}/test/debug_game.rb",
       "args": [],
-      "askParameters": true
-    },
-    {
-      "type": "rdbg",
-      "name": "Attach with rdbg",
-      "request": "attach"
+      "stdin": "${workspaceFolder}/test/guesses.txt",
+      "askParameters": false
     }
   ]
 }
