--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,22 @@
 {
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     
     {
-      "name": "Debug Mastermind with Test Input",
       "type": "rdbg",
+      "name": "Debug current file with rdbg",
       "request": "launch",
-      "script": "${workspaceFolder}/test/debug_game.rb",
+      "script": "${file}",
       "args": [],
-      "stdin": "${workspaceFolder}/test/guesses.txt",
-      "askParameters": false
+      "askParameters": true
+    },
+    {
+      "type": "rdbg",
+      "name": "Attach with rdbg",
+      "request": "attach"
     }
   ]
 }
